--- a/backend/templates/welcome_2.html
+++ b/backend/templates/welcome_2.html
@@ -31,6 +31,7 @@
 
 
         <div class='container_2'>
+          <!--inizio card-->
           <div class='card_2'>
             <img src='../static/image/RPi-Logo-PRINT.png'>
             <div class='card-body_2'>
@@ -40,99 +41,8 @@
               </div>
               <button onclick="togglePopup()">Sensor...</button>
             </div>
-            
+            <!--fine card-->
           </div>
-          <div class='card_2'>
-            <img src='../static/image/RPi-Logo-PRINT.png'>
-            <div class='card-body_2'>
-              <div class='card-text_2'>
-                <h3>Raspberry Id:</h3>
-
-              </div>
-              <button onclick="togglePopup()">Sensor...</button>
-            </div>
-          </div>
-          <div class='card_2'>
-            <img src='../static/image/RPi-Logo-PRINT.png'>
-            <div class='card-body_2'>
-              <div class='card-text_2'>
-                <h3>Raspberry Id:</h3>
-
-              </div>
-              <button onclick="togglePopup()">Sensor...</button>
-            </div>
-          </div>
-          <div class='card_2'>
-            <img src='../static/image/RPi-Logo-PRINT.png'>
-            <div class='card-body_2'>
-              <div class='card-text_2'>
-                <h3>Raspberry Id:</h3>
-
-              </div>
-              <button onclick="togglePopup()">Sensor...</button>
-            </div>
-          </div>
-          <div class='card_2'>
-            <img src='../static/image/RPi-Logo-PRINT.png'>
-            <div class='card-body_2'>
-              <div class='card-text_2'>
-                <h3>Raspberry Id:</h3>
-
-              </div>
-              <button onclick="togglePopup()">Sensor...</button>
-            </div>
-          </div>
-          <div class='card_2'>
-            <img src='../static/image/RPi-Logo-PRINT.png'>
-            <div class='card-body_2'>
-              <div class='card-text_2'>
-                <h3>Raspberry Id:</h3>
-
-              </div>
-              <button onclick="togglePopup()">Sensor...</button>
-            </div>
-          </div>
-          <div class='card_2'>
-            <img src='../static/image/RPi-Logo-PRINT.png'>
-            <div class='card-body_2'>
-              <div class='card-text_2'>
-                <h3>Raspberry Id:</h3>
-
-              </div>
-              <button onclick="togglePopup()">Sensor...</button>
-            </div>
-          </div>
-          <div class='card_2'>
-            <img src='../static/image/RPi-Logo-PRINT.png'>
-            <div class='card-body_2'>
-              <div class='card-text_2'>
-                <h3>Raspberry Id:</h3>
-
-              </div>
-              <button onclick="togglePopup()">Sensor...</button>
-            </div>
-          </div>
-          <div class='card_2'>
-            <img src='../static/image/RPi-Logo-PRINT.png'>
-            <div class='card-body_2'>
-              <div class='card-text_2'>
-                <h3>Raspberry Id:</h3>
-
-              </div>
-              <button onclick="togglePopup()">Sensor...</button>
-            </div>
-          </div>
-          <div class='card_2'>
-            <img src='../static/image/RPi-Logo-PRINT.png'>
-            <div class='card-body_2'>
-              <div class='card-text_2'>
-                <h3>Raspberry Id:</h3>
-
-              </div>
-              <button onclick="togglePopup()">Sensor...</button>
-            </div>
-          </div>
-          
         </div>
 
         
