--- a/backend/templates/welcome_2.html
+++ b/backend/templates/welcome_2.html
@@ -1,82 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='./css/style-welcome.css') }}">
-    <link rel="stylesheet" href="../static/css/style-welcome.css">
-</head>
-<body>
-
-<main class="main">
-    <aside class="sidebar">
-      <nav class="nav">
-        <ul>
-          <li class="active"><a href="#">Raspberry List</a></li>
-          <li><a href="#">User info</a></li>
-          <li><a href="#">contact</a></li>
-          <li><a href="#">Sign Out</a></li>
-        </ul>
-      </nav>
-    </aside>
-    <section class="twitter">
-
-
-      <div class="container">
-
-
-
-
-
-        <div class='container_2'>
-          <!--inizio card-->
-          <div class='card_2'>
-            <img src='../static/image/RPi-Logo-PRINT.png'>
-            <div class='card-body_2'>
-              <div class='card-text_2'>
-                <h3>Raspberry Id:</h3>
-
-              </div>
-              <button onclick="togglePopup()">Sensor...</button>
-            </div>
-            <!--fine card-->
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='./css/style-welcome.css') }}"
+    />
+    <link rel="stylesheet" href="../static/css/style-welcome.css" />
+  </head>
+  <body>
+    <main class="main">
+      <aside class="sidebar">
+        <nav class="nav">
+          <ul>
+            <li class="active"><a href="#">Raspberry List</a></li>
+            <li><a href="#">User info</a></li>
+            <li><a href="#">contact</a></li>
+            <li><a id="logout">Sign Out</a></li>
+          </ul>
+        </nav>
+      </aside>
+      <section class="twitter">
+        <div class="container">
+          <div class="container_2" id="contenitore">
+            <!--  CARD RSPI   -->
           </div>
         </div>
+      </section>
+    </main>
 
-        
-        
+    <div id="popup">
+      <h2>title</h2>
+      <p>testo testo testo testo testo testo testo testo testo</p>
+      <button onclick="togglePopup()">Close</button>
+    </div>
 
-
- 
-
-
-
-
-
-
-        
+    <script type="text/html" id="rspi">
+      <div class="card_2">
+        <img
+          src="{{ url_for('static', filename='./image/RPi-Logo-PRINT.png') }}"
+        />
+        <div class="card-body_2">
+          <div class="card-text_2">
+            <h3>Raspberry Id: %mac%</h3>
+          </div>
+          <button onclick="togglePopup()">Sensor...</button>
+        </div>
       </div>
-    </section>
-  </main>
+    </script>
 
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
 
+    <script type="text/javascript">
+      url = new URL(window.location.href);
+      const vett = url.pathname.split("/");
+      const user = vett[2];
 
-<div id="popup">
-  <h2>title</h2>
-  <p>testo testo testo testo testo testo testo testo testo</p>
-  <button onclick="togglePopup()">Close</button>
-</div>
+      function togglePopup() {
+        var popup = document.getElementById("popup");
+        popup.classList.toggle("active");
+      }
 
+      $(document).ready(async () => {
+        //__________________
 
-<script type="text/javascript">
-function togglePopup(){
-      var popup = document.getElementById("popup");
-      popup.classList.toggle("active");
+        const card = $("#rspi").text();
 
-}
+        //____________________________
 
-</script>
-</body>
+        console.log("ready");
+        console.log(url);
+        console.log(vett);
+
+        const res = await fetch(`${url.origin}/RSPi?user=${user}`);
+        const resj = await res.json();
+        console.log(resj);
+        if (resj.status != "200") {
+          alert(`errore: ${resj.message}`);
+        } else {
+          const data = resj.data;
+          console.log(data);
+
+          for (rspi of data) {
+            $("#contenitore").append(card.replace("%mac%", rspi.mac));
+          }
+        }
+      });
+
+      $("#logout").click(async () => {
+        console.log("ciao");
+        const rowRes = await fetch(`/user/logOut`);
+        const res = await rowRes.json();
+
+        if (res.status == "200") {
+          console.log(res.status);
+          window.location.href = "login";
+        }
+      });
+    </script>
+  </body>
 </html>
