--- a/backend/templates/welcome_2.html
+++ b/backend/templates/welcome_2.html
@@ -16,10 +16,10 @@
       <aside class="sidebar">
         <nav class="nav">
           <ul>
-            <li class="active"><a href="#">Raspberry List</a></li>
-            <li><a href="#">User info</a></li>
-            <li><a href="#">contact</a></li>
-            <li><a id="logout">Sign Out</a></li>
+            <li class="active" id="rspiList"><a href="#">Raspberry List</a></li>
+            <li class="" id="userInfo"><a href="#">User info</a></li>
+            <li class="" id="add"><a href="#">Add rspi</a></li>
+            <li class="" id="logout"><a href="#">Sign Out</a></li>
           </ul>
         </nav>
       </aside>
@@ -62,19 +62,15 @@
       url = new URL(window.location.href);
       const vett = url.pathname.split("/");
       const user = vett[2];
+      const card = $("#rspi").text();
 
       function togglePopup() {
         var popup = document.getElementById("popup");
         popup.classList.toggle("active");
       }
+      //_______________________________________________________________________________
 
       $(document).ready(async () => {
-        //__________________
-
-        const card = $("#rspi").text();
-
-        //____________________________
-
         console.log("ready");
         console.log(url);
         console.log(vett);
@@ -89,11 +85,14 @@
           console.log(data);
 
           for (rspi of data) {
-            $("#contenitore").append(card.replace("%mac%", rspi.mac));
+            $("#contenitore").append(
+              card.replace("%mac%", rspi.name ? rspi.name : rspi.mac)
+            );
           }
         }
       });
 
+      //_______________________________________________________________________________
       $("#logout").click(async () => {
         console.log("ciao");
         const rowRes = await fetch(`/user/logOut`);
@@ -102,6 +101,48 @@
         if (res.status == "200") {
           console.log(res.status);
           window.location.href = "login";
+        }
+      });
+      //_______________________________________________________________________________
+      $("#add").click(async () => {
+        window.location.href = `${url.origin}/view/${user}/rspreg`;
+      });
+
+      $("#rspiList").click(async () => {
+        const res = await fetch(`${url.origin}/RSPi?user=${user}`);
+        const resj = await res.json();
+        console.log(resj);
+        if (resj.status != "200") {
+          alert(`errore: ${resj.message}`);
+        } else {
+          const data = resj.data;
+          console.log(data);
+
+          for (rspi of data) {
+            $("#contenitore").append(
+              card.replace("%mac%", rspi.name ? rspi.name : rspi.mac)
+            );
+          }
+        }
+      });
+
+      [$("#rspiList"), $("#userInfo"), $("#add"), $("#logout")].forEach(
+        (el) => {
+          el.click(() => {
+            $("#contenitore").empty();
+
+            el.attr("class", "active");
+            el.siblings().attr("class", "");
+          });
+        }
+      );
+
+      $("#userInfo").click(async () => {
+        Res = await fetch(`${url.origin}/user`);
+        res = await Res.json();
+        if (res.status != "200") {
+          alert(`Error : ${res.status}: ${res.message}`);
+        } else {
         }
       });
     </script>
