--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -65,7 +65,7 @@
             <i class="d-block fa fa-stop-circle fa-2x mr-md-5 text-primary"></i>
             <ul class="nav mx-md-auto d-flex justify-content-center">
               <li class="nav-item">
-                <a class="nav-link active" href="/view/home">Home</a>
+                <a class="nav-link active" href="/view">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Features</a>
