--- a/backend/templates/userPage.html
+++ b/backend/templates/userPage.html
@@ -20,6 +20,7 @@
             <li class="" id="userInfo"><a href="#">User info</a></li>
             <li class="" id="add"><a href="#">Add rspi</a></li>
             <li class="" id="logout"><a href="#">Sign Out</a></li>
+            <li class="" id="logout"><a href="/view">Back to home</a></li>
           </ul>
         </nav>
       </aside>
