--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -39,7 +39,7 @@
             </li>
             <li class="nav-item ml-4">
               <a class="nav-link text-primary" href="#"
-                ><b><a href="/view/register">Register</a></b></a
+                ><b><a href="/view/register">Sign up</a></b></a
               >
             </li>
           </ul>
@@ -55,7 +55,7 @@
           <div class="mx-auto col-lg-8 col-md-10">
             <h3 class="display-4 mb-3">THIS IS MULTY SENSOR ALARM</h3>
             <h3 class="text-primary mb-4">AN OPEN SOURCE SECURITY SYSTEM</h3>
-            <a href="/view/login" class="btn btn-lg btn-primary mx-1"
+            <a href="/view/register" class="btn btn-lg btn-primary mx-1"
               >SIGN UP</a
             >
             <a class="btn btn-lg mx-1 btn-outline-primary" href="#"
