--- a/backend/templates/userPage.html
+++ b/backend/templates/userPage.html
@@ -34,8 +34,37 @@
     </main>
 
     <div id="popup">
-      <h2>title</h2>
-      <p>testo testo testo testo testo testo testo testo testo</p>
+      
+      <div class="tabs">
+        <div class="tab-header">
+          <div class="active">
+            Sensore_1
+          </div>
+          <div>
+            Sensore_2
+          </div>
+          <div>
+            Sensore_3
+          </div>
+        </div>
+        <div class="tab-content">
+          <div class="active">
+            <h2>Sensore_1</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quam aspernatur architecto rerum quia repellendus, optio numquam, iusto temporibus est ut facilis esse aliquid aliquam ducimus! Commodi reiciendis quidem aliquid.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga deserunt soluta exercitationem consectetur voluptate assumenda, eligendi totam vel voluptates quia accusamus, facere reprehenderit nostrum blanditiis eius aliquam impedit ipsum.</p>
+          </div>
+          <div>
+            <h2>Sensore_2</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quam aspernatur architecto rerum quia repellendus, optio numquam, iusto temporibus est ut facilis esse aliquid aliquam ducimus! Commodi reiciendis quidem aliquid.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga deserunt soluta exercitationem consectetur voluptate assumenda, eligendi totam vel voluptates quia accusamus, facere reprehenderit nostrum blanditiis eius aliquam impedit ipsum.</p>
+          </div>
+          <div>
+            <h2>sensore_3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quam aspernatur architecto rerum quia repellendus, optio numquam, iusto temporibus est ut facilis esse aliquid aliquam ducimus! Commodi reiciendis quidem aliquid.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga deserunt soluta exercitationem consectetur voluptate assumenda, eligendi totam vel voluptates quia accusamus, facere reprehenderit nostrum blanditiis eius aliquam impedit ipsum.</p>
+          </div>
+        </div>
+      </div>
       <button onclick="togglePopup()">Close</button>
     </div>
 
