--- a/backend/templates/userPage.html
+++ b/backend/templates/userPage.html
@@ -15,7 +15,7 @@
     <main class="main">
       <aside class="sidebar">
         <nav class="nav">
-          <ul>
+          <ul id="s_list">
             <li class="active" id="rspiList"><a href="#">Raspberry List</a></li>
             <li class="" id="userInfo"><a href="#">User info</a></li>
             <li class="" id="add"><a href="#">Add rspi</a></li>
@@ -34,34 +34,63 @@
     </main>
 
     <div id="popup">
-      
-      <div class="tabs">
+      <div class="tabs p-3">
         <div class="tab-header">
-          <div class="active">
-            Sensore_1
-          </div>
-          <div>
-            Sensore_2
-          </div>
-          <div>
-            Sensore_3
-          </div>
+          <div class="active">Sensore_1</div>
+          <div>Sensore_2</div>
+          <div>Sensore_3</div>
+          <div>Sensore_2</div>
+          <div>Sensore_3</div>
+          <div>Sensore_2</div>
+          <div>Sensore_3</div>
+          <div>Sensore_2</div>
+          <div>Sensore_3</div>
         </div>
         <div class="tab-content">
           <div class="active">
             <h2>Sensore_1</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quam aspernatur architecto rerum quia repellendus, optio numquam, iusto temporibus est ut facilis esse aliquid aliquam ducimus! Commodi reiciendis quidem aliquid.</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga deserunt soluta exercitationem consectetur voluptate assumenda, eligendi totam vel voluptates quia accusamus, facere reprehenderit nostrum blanditiis eius aliquam impedit ipsum.</p>
+            <p class="mb-3 text-dark">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+              quam aspernatur architecto rerum quia repellendus, optio numquam,
+              iusto temporibus est ut facilis esse aliquid aliquam ducimus!
+              Commodi reiciendis quidem aliquid asdlkandlkn.
+            </p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat
+              fuga deserunt soluta exercitationem consectetur voluptate
+              assumenda, eligendi totam vel voluptates quia accusamus, facere
+              reprehenderit nostrum blanditiis eius aliquam impedit ipsum.
+            </p>
           </div>
           <div>
             <h2>Sensore_2</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quam aspernatur architecto rerum quia repellendus, optio numquam, iusto temporibus est ut facilis esse aliquid aliquam ducimus! Commodi reiciendis quidem aliquid.</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga deserunt soluta exercitationem consectetur voluptate assumenda, eligendi totam vel voluptates quia accusamus, facere reprehenderit nostrum blanditiis eius aliquam impedit ipsum.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+              quam aspernatur architecto rerum quia repellendus, optio numquam,
+              iusto temporibus est ut facilis esse aliquid aliquam ducimus!
+              Commodi reiciendis quidem aliquid.
+            </p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat
+              fuga deserunt soluta exercitationem consectetur voluptate
+              assumenda, eligendi totam vel voluptates quia accusamus, facere
+              reprehenderit nostrum blanditiis eius aliquam impedit ipsum.
+            </p>
           </div>
           <div>
             <h2>sensore_3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quam aspernatur architecto rerum quia repellendus, optio numquam, iusto temporibus est ut facilis esse aliquid aliquam ducimus! Commodi reiciendis quidem aliquid.</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga deserunt soluta exercitationem consectetur voluptate assumenda, eligendi totam vel voluptates quia accusamus, facere reprehenderit nostrum blanditiis eius aliquam impedit ipsum.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+              quam aspernatur architecto rerum quia repellendus, optio numquam,
+              iusto temporibus est ut facilis esse aliquid aliquam ducimus!
+              Commodi reiciendis quidem aliquid.
+            </p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat
+              fuga deserunt soluta exercitationem consectetur voluptate
+              assumenda, eligendi totam vel voluptates quia accusamus, facere
+              reprehenderit nostrum blanditiis eius aliquam impedit ipsum.
+            </p>
           </div>
         </div>
       </div>
