--- a/backend/templates/userPage.html
+++ b/backend/templates/userPage.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <script>
+      let tabHeaders = document.querySelectorAll("div");
+      let tabContents = document.querySelectorAll(".popup .tabs .tab-content > div");
+      
+      for(let i=0;i<tabHeaders.length;i++){
+        tabHeaders[i].addEventListener("click",function(){
+          document.querySelector(".tabs .tab-header > .active_2").classList.remove("active_2");
+          tabHeaders[i].classList.add("active_2");
+          document.querySelector(".tabs .tab-content > .active_2").classList.remove("active_2");
+          tabContents[i].classList.add("active_2");
+        })
+      }
+    </script>
+
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,6 +26,7 @@
       href="{{ url_for('static', filename='./css/style-welcome.css') }}"
     />
     <link rel="stylesheet" href="../static/css/style-welcome.css" />
+
   </head>
   <body>
     <main class="main">
@@ -34,38 +51,40 @@
     </main>
 
     <div id="popup">
-      
       <div class="tabs">
         <div class="tab-header">
-          <div class="active">
-            Sensore_1
+          <div class="active_2">
+            Sensor_1
           </div>
           <div>
-            Sensore_2
+            Sensor_2
           </div>
           <div>
-            Sensore_3
+            sensor_3
           </div>
+
         </div>
         <div class="tab-content">
-          <div class="active">
-            <h2>Sensore_1</h2>
+          <div class="active_2">
+            <h2>Sensor_1</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quam aspernatur architecto rerum quia repellendus, optio numquam, iusto temporibus est ut facilis esse aliquid aliquam ducimus! Commodi reiciendis quidem aliquid.</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga deserunt soluta exercitationem consectetur voluptate assumenda, eligendi totam vel voluptates quia accusamus, facere reprehenderit nostrum blanditiis eius aliquam impedit ipsum.</p>
           </div>
           <div>
-            <h2>Sensore_2</h2>
+            <h2>Sensor_2</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quam aspernatur architecto rerum quia repellendus, optio numquam, iusto temporibus est ut facilis esse aliquid aliquam ducimus! Commodi reiciendis quidem aliquid.</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga deserunt soluta exercitationem consectetur voluptate assumenda, eligendi totam vel voluptates quia accusamus, facere reprehenderit nostrum blanditiis eius aliquam impedit ipsum.</p>
           </div>
           <div>
-            <h2>sensore_3</h2>
+            <h2>sensor_3</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quam aspernatur architecto rerum quia repellendus, optio numquam, iusto temporibus est ut facilis esse aliquid aliquam ducimus! Commodi reiciendis quidem aliquid.</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga deserunt soluta exercitationem consectetur voluptate assumenda, eligendi totam vel voluptates quia accusamus, facere reprehenderit nostrum blanditiis eius aliquam impedit ipsum.</p>
           </div>
+
         </div>
       </div>
-      <button onclick="togglePopup()">Close</button>
+
+      <button id="button-close" onclick="togglePopup()">Close</button>
     </div>
 
     <script type="text/html" id="rspi">
