--- a/backend/templates/userPage.html
+++ b/backend/templates/userPage.html
@@ -32,7 +32,7 @@
     <main class="main">
       <aside class="sidebar">
         <nav class="nav">
-          <ul id="s_list">
+          <ul>
             <li class="active" id="rspiList"><a href="#">Raspberry List</a></li>
             <li class="" id="userInfo"><a href="#">User info</a></li>
             <li class="" id="add"><a href="#">Add rspi</a></li>
@@ -51,65 +51,6 @@
     </main>
 
     <div id="popup">
-<<<<<<< HEAD
-      <div class="tabs p-3">
-        <div class="tab-header">
-          <div class="active">Sensore_1</div>
-          <div>Sensore_2</div>
-          <div>Sensore_3</div>
-          <div>Sensore_2</div>
-          <div>Sensore_3</div>
-          <div>Sensore_2</div>
-          <div>Sensore_3</div>
-          <div>Sensore_2</div>
-          <div>Sensore_3</div>
-        </div>
-        <div class="tab-content">
-          <div class="active">
-            <h2>Sensore_1</h2>
-            <p class="mb-3 text-dark">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-              quam aspernatur architecto rerum quia repellendus, optio numquam,
-              iusto temporibus est ut facilis esse aliquid aliquam ducimus!
-              Commodi reiciendis quidem aliquid asdlkandlkn.
-            </p>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat
-              fuga deserunt soluta exercitationem consectetur voluptate
-              assumenda, eligendi totam vel voluptates quia accusamus, facere
-              reprehenderit nostrum blanditiis eius aliquam impedit ipsum.
-            </p>
-          </div>
-          <div>
-            <h2>Sensore_2</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-              quam aspernatur architecto rerum quia repellendus, optio numquam,
-              iusto temporibus est ut facilis esse aliquid aliquam ducimus!
-              Commodi reiciendis quidem aliquid.
-            </p>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat
-              fuga deserunt soluta exercitationem consectetur voluptate
-              assumenda, eligendi totam vel voluptates quia accusamus, facere
-              reprehenderit nostrum blanditiis eius aliquam impedit ipsum.
-            </p>
-          </div>
-          <div>
-            <h2>sensore_3</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-              quam aspernatur architecto rerum quia repellendus, optio numquam,
-              iusto temporibus est ut facilis esse aliquid aliquam ducimus!
-              Commodi reiciendis quidem aliquid.
-            </p>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat
-              fuga deserunt soluta exercitationem consectetur voluptate
-              assumenda, eligendi totam vel voluptates quia accusamus, facere
-              reprehenderit nostrum blanditiis eius aliquam impedit ipsum.
-            </p>
-=======
       <div class="tabs">
         <div class="tab-header">
           <div class="active_2">
@@ -121,6 +62,14 @@
           <div>
             sensor_3
           </div>
+          <div>
+            sensor_3
+          </div>
+          <div>
+            sensor_3
+          </div>
+
+          <!--qua devi aggiungere il titolo del tab!-->
 
         </div>
         <div class="tab-content">
@@ -138,8 +87,8 @@
             <h2>sensor_3</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quam aspernatur architecto rerum quia repellendus, optio numquam, iusto temporibus est ut facilis esse aliquid aliquam ducimus! Commodi reiciendis quidem aliquid.</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga deserunt soluta exercitationem consectetur voluptate assumenda, eligendi totam vel voluptates quia accusamus, facere reprehenderit nostrum blanditiis eius aliquam impedit ipsum.</p>
->>>>>>> 97cde005e4b9dde7e2d4cfc714cb561b9eeec436
           </div>
+          <!--qua devi aggiungere il testo del tab! dentro il div tab-content e non devi copiare tutto -->
 
         </div>
       </div>
