--- a/backend/static/css/style-welcome.css
+++ b/backend/static/css/style-welcome.css
@@ -331,21 +331,42 @@ a:hover {
 
 
 #button-close{
-  z-index: 0;
+  z-index: 3;
   display: block;
-  left: 95%;
+  
   position: relative;
-  top:15px;
+  left:96%;
   padding: 0;
   border: 0;
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
+  height: 49px;
+  width: 49px;
+  font-family: sans-serif;
   background-color: #53cc94;
+  border-radius: 50%;
 }
 
 button#button-close:hover{
   background-color: #4eb886;
   transform: scale(0.9);
-  
+}
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgba(41, 50, 53, 1);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
