--- a/backend/templates/userPage.html
+++ b/backend/templates/userPage.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='./css/bassiStyle.css') }}"
     />
+    
     <link rel="stylesheet" href="../static/css/style-welcome.css" />
   </head>
   <body>
@@ -59,19 +60,29 @@
           src="{{ url_for('static', filename='./image/RPi-Logo-PRINT.png') }}"
         />
         <div class="card-body_2">
-          <div class="card-text_2">
-            <h3>Raspberry Id: {{a.mac}}</h3>
+          <div style="margin-bottom: 5px;" class="card-text_2">
+            <h3 >Raspberry Id: {{a.mac}}</h3>
           </div>
           <input
-            type="text"
-            placeholder="new name"
+            type="text",
+            placeholder="new name",
+            style="  
+            border-radius: 0.25rem;
+            border: 1px solid #ced4da;
+            box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+            color: #495057;
+            background-clip: padding-box;
+            width: 100%;
+            padding: 0.260rem 0.260rem;
+
+            "
             id="newName,{{a.mac}}"
             class="p-1"
           />
-          <button type="button" class="btn btn-outline-dark changeNameBtn">
-            Send new name
+          <button type="button" style="margin-top:15px;margin-bottom:10px" class="btn btn-outline-dark changeNameBtn">
+            Change Name
           </button>
-          <button onclick="togglePopup('{{a.mac}}')">Sensor...</button>
+          <button onclick="togglePopup('{{a.mac}}')">Sensor List</button>
         </div>
       </div>
       {% endfor %}
