addattamento user info

--- a/backend/templates/userPage.html
+++ b/backend/templates/userPage.html
@@ -13,7 +13,8 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='./css/bassiStyle.css') }}"
     />
-    
+    <link rel="stylesheet" href="../static/css/style-userinfo.css" />
+
     <link rel="stylesheet" href="../static/css/style-welcome.css" />
   </head>
   <body>
@@ -61,11 +62,13 @@
         />
         <div class="card-body_2">
           <div style="margin-bottom: 5px;" class="card-text_2">
-            <h3 >Raspberry Id: {{a.mac}}</h3>
+            <h3>Raspberry Id: {{a.mac}}</h3>
           </div>
           <input
-            type="text",
-            placeholder="new name",
+            type="text"
+            ,
+            placeholder="new name"
+            ,
             style="  
             border-radius: 0.25rem;
             border: 1px solid #ced4da;
@@ -79,13 +82,73 @@
             id="newName,{{a.mac}}"
             class="p-1"
           />
-          <button type="button" style="margin-top:15px;margin-bottom:10px" class="btn btn-outline-dark changeNameBtn">
+          <button
+            type="button"
+            style="margin-top:15px;margin-bottom:10px"
+            class="btn btn-outline-dark changeNameBtn"
+          >
             Change Name
           </button>
           <button onclick="togglePopup('{{a.mac}}')">Sensor List</button>
         </div>
       </div>
       {% endfor %}
+    </script>
+
+    <script type="text/html" id="userInfoHtml">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="row-fluid user-infos">
+            <div class="col-md-12">
+              <div class="panel panel-primary">
+                <div class="panel-heading"></div>
+                <div class="panel-body">
+                  <div class="row">
+                    <div class="row-sm-height">
+                      <div class="col-md-3 col-sm-height col-sm-middle">
+                        <img
+                          src="http://gravatar.com/avatar/ffc6005d7f45c5e53f73526252ff70a8?s=80&d=https://codepen.io/assets/avatars/user-avatar-80x80-94696e1c3870f64217a8040eedd4a1ed.png"
+                          alt="User Pic"
+                        />
+                      </div>
+                      <div class="col-md-6 col-sm-height">
+                        <strong>Informazioni sull'utente</strong><br /><br />
+                        <table
+                          class="table table-condensed table-responsive table-user-information"
+                        >
+                          <tbody>
+                            <tr>
+                              <td>username:</td>
+                              <td>%username%</td>
+                            </tr>
+                            <tr>
+                              <td>first name:</td>
+                              <td>%name%</td>
+                            </tr>
+                            <tr>
+                              <td>last name:</td>
+                              <td>%surname%</td>
+                            </tr>
+                            <tr>
+                              <td>email:</td>
+                              <td>%email%</td>
+                            </tr>
+                            <tr>
+                              <td>Numero di telefono:</td>
+                              <td>%tel%</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                      <div class="col-md-3 col-sm-height col-sm-middle"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </script>
 
     <script
