--- a/backend/templates/userPage.html
+++ b/backend/templates/userPage.html
@@ -33,7 +33,7 @@
       <section class="twitter">
         <div class="container">
           <div class="container_2" id="contenitore">
-            <!--  CARD RSPI   -->
+            <!--  CARD RSPI  OPPURE USER INFO -->
 
             <!--_________________________________-->
           </div>
@@ -55,14 +55,14 @@
     </div>
 
     <script type="text/html" id="rspi">
-      {% for a in rspi %}
+      {%if rspi|length != 0%}{% for a in rspi %}
       <div class="card_2">
         <img
           src="{{ url_for('static', filename='./image/RPi-Logo-PRINT.png') }}"
         />
         <div class="card-body_2">
           <div style="margin-bottom: 5px;" class="card-text_2">
-            <h3>Raspberry Id: {{a.mac}}</h3>
+            <h3>Raspberry Id: {{a.name if a.name else a.mac}}</h3>
           </div>
           <input
             type="text"
@@ -70,29 +70,33 @@
             placeholder="new name"
             ,
             style="  
-            border-radius: 0.25rem;
-            border: 1px solid #ced4da;
-            box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-            color: #495057;
-            background-clip: padding-box;
-            width: 100%;
-            padding: 0.260rem 0.260rem;
+              border-radius: 0.25rem;
+              border: 1px solid #ced4da;
+              box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+              color: #495057;
+              background-clip: padding-box;
+              width: 100%;
+              padding: 0.260rem 0.260rem;
 
-            "
+              "
             id="newName,{{a.mac}}"
             class="p-1"
           />
           <button
             type="button"
             style="margin-top:15px;margin-bottom:10px"
-            class="btn btn-outline-dark changeNameBtn"
+            class="btn btn-outline-dark"
+            id="changeNameBtn"
+            onclick="changeName('{{a.mac}}')"
           >
             Change Name
           </button>
           <button onclick="togglePopup('{{a.mac}}')">Sensor List</button>
         </div>
       </div>
-      {% endfor %}
+      {% endfor %} {%else%}
+      <h1 class="text-primary" style="color: black;">You have no rspi</h1>
+      {%endif%}
     </script>
 
     <script type="text/html" id="userInfoHtml">
@@ -105,9 +109,12 @@
                 <div class="panel-body">
                   <div class="row">
                     <div class="row-sm-height">
-                      <div class="col-md-3 col-sm-height col-sm-middle">
+                      <div
+                        class="col-md-3 col-sm-height col-sm-middle"
+                        style="margin-right: 3px;"
+                      >
                         <img
-                          src="http://gravatar.com/avatar/ffc6005d7f45c5e53f73526252ff70a8?s=80&d=https://codepen.io/assets/avatars/user-avatar-80x80-94696e1c3870f64217a8040eedd4a1ed.png"
+                          src=" {{ url_for('static', filename='./user.svg') }}"
                           alt="User Pic"
                         />
                       </div>
