--- a/backend/templates/register-rspi.html
+++ b/backend/templates/register-rspi.html
@@ -38,6 +38,16 @@
                 />
               </div>
               <div class="form-group">
+                <label for="form16" class="text-info">Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  name="name"
+                  placeholder="name"
+                />
+              </div>
+              <div class="form-group">
                 <label for="form16" class="text-info">Password</label>
                 <input
                   type="password"
@@ -134,6 +144,7 @@
               const data = {
                 user: user,
                 mac: document.getElementById("mac").value,
+                name: document.getElementById("name").value,
               };
               console.log(data);
 
