--- a/backend/templates/userPage.html
+++ b/backend/templates/userPage.html
@@ -125,12 +125,18 @@
                           alt="User Pic"
                         />
                       </div>
-                      <div class="col-md-6 col-sm-height">
-                        <strong>Informazioni sull'utente</strong><br /><br />
-                        <table
+                      <div style="
+                      font-size: 20px;
+                      margin-left: auto;
+                      margin-right: auto; 
+                      
+                      "
+                      class="col-md-6 col-sm-height">
+                        <strong ><p style="text-align: center">User information:</p></strong><br /><br />
+                        <table style="margin-left:20px; "
                           class="table table-condensed table-responsive table-user-information"
                         >
-                          <tbody>
+                          <tbody >
                             <tr>
                               <td>username:</td>
                               <td>%username%</td>
@@ -148,7 +154,7 @@
                               <td>%email%</td>
                             </tr>
                             <tr>
-                              <td>Numero di telefono:</td>
+                              <td>Phone number:</td>
                               <td>%tel%</td>
                             </tr>
                           </tbody>
